--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@
 
 
     <!-- Feature Start -->
-    <div class="feature">
+    <div class="feature free-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
-                    <div class="section-header">
+                    <div class="section-header free-section-title">
                         <h2>Recibe asesoría gratis</h2>
                     </div>
-                    <div class="feature-text">
+                    <div class="feature-text free-section-p">
                         <p>
                             Nuestra prioridad eres tú, de acuerdo a tus gustos y deseos diseñamos un plan perfecto para ti, sobre todo que se <strong>adapte a tu bolsillo</strong>.
                         </p>
@@ -249,7 +249,7 @@
                             <div class="col-5 feature-text_items_item">
                                 <h3>Cara a cara</h3>
                                 <p>
-                                    Conectémonos a una llamada.
+                                    Conectémonos en una llamada.
                                 </p>
                             </div>
 
