--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="section-header free-section-title">
-                        <h2>Recibe asesoría gratis</h2>
+                        <h2><strong>Recibe asesoría gratis</strong></h2>
                     </div>
                     <div class="feature-text free-section-p">
                         <p>
