--- a/index.html
+++ b/index.html
@@ -294,45 +294,60 @@
     <!-- Feature End -->
 
 
+    <!-- Insert Product Start -->
+    <div class="section-header text-center">
+        <p class="w">Tours, Pasadías</p>
+        <h2>Explora las 10 mejores excursiones en Cartagena</h2>
+    </div>
+    <div>
+        <p class="text-center">Las Islas privadas y publicas de Cartagena</p>
+    </div>
+    <div id="tours" class="carrousel">
+        <div class="carrousel__container">
+            <div id="content_product" class="page-content content_product">
+                <!-- Products Here (acountCard.js) -->
+            </div>
+        </div>
+        <div role="tablist" class="carousel__indicadores">
+
+        </div>
+    </div>
+    <!-- Insert Product End -->
+
+    <div class="menu">
+        <div class="container">
+            <div class="section-header text-center">
+                <p>Tours En La Ciudad</p>
+                <h2>Tours Dentro De Cartagena</h2>
+            </div>
+        </div>
+        <div>
+            <p class="text-center">Tures en la Ciudad de Cartagena | Diferentes opciones de entretenimiento</p>
+        </div>
+        <div class="carrousel">
+            <div class="carrousel__container">
+                <div id="carousel__container_content_product" class="page-content carousel__container_content_product">
+                    <!-- Products Here (acountCard.js) -->
+                </div>
+            </div>
+            <div role="tablist" class="carousel__indicadores_inside">
+
+            </div>
+        </div>
+    </div>
+
+
     <div class="menu">
         <div class="container">
             <div class="section-header">
-                <h2>Tours a Cartagena en oferta</h2>
+                <h2><strong>Tours a Cartagena en oferta</strong></h2>
             </div>
             <div>
-                <div class="Products-show-container flash">
+                <div class="Products-show-container flash free-section-offert">
                     <div class="Product-section-title">
                         <h2>
                             Ofertas
                         </h2>
-                        <div class="Counter-container">
-                            <div class="Counter-days">
-                                <div class="Counter-days_number">
-                                    <span> 12 </span>
-                                </div>
-                                <span class="Letter">
-                                    Days
-                                </span>
-                            </div>
-
-                            <div class="Counter-hours">
-                                <div class="Counter-hours_number">
-                                    <span> 5 </span>
-                                </div>
-                                <span class="Letter">
-                                    Hours
-                                </span>
-                            </div>
-
-                            <div class="Counter-mins">
-                                <div class="Counter-mins_number">
-                                    <span> 22 </span>
-                                </div>
-                                <span class="Letter">
-                                    Mins
-                                </span>
-                            </div>
-                        </div>
                     </div>
 
                     <div class="Arrowa-buttons">
@@ -436,49 +451,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- Insert Product Start -->
-    <div class="section-header text-center">
-        <p class="w">Tours, Pasadías</p>
-        <h2>Explora las 10 mejores excursiones en Cartagena</h2>
-    </div>
-    <div>
-        <p class="text-center">Las Islas privadas y publicas de Cartagena</p>
-    </div>
-    <div id="tours" class="carrousel">
-        <div class="carrousel__container">
-            <div id="content_product" class="page-content content_product">
-                <!-- Products Here (acountCard.js) -->
-            </div>
-        </div>
-        <div role="tablist" class="carousel__indicadores">
-
-        </div>
-    </div>
-    <!-- Insert Product End -->
-
-    <div class="menu">
-        <div class="container">
-            <div class="section-header text-center">
-                <p>Tours En La Ciudad</p>
-                <h2>Tours Dentro De Cartagena</h2>
-            </div>
-        </div>
-        <div>
-            <p class="text-center">Tures en la Ciudad de Cartagena | Diferentes opciones de entretenimiento</p>
-        </div>
-        <div class="carrousel">
-            <div class="carrousel__container">
-                <div id="carousel__container_content_product" class="page-content carousel__container_content_product">
-                    <!-- Products Here (acountCard.js) -->
-                </div>
-            </div>
-            <div role="tablist" class="carousel__indicadores_inside">
-
             </div>
         </div>
     </div>
