--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta
         content="excursiones y tours en cartagena 2023, pasadia en cartagena, bora bora, borabora, baru, bora bora hotel, bora bora precios, isla bora bora, playa bora bora, borabora hotel, bora bora habitaciones, bora bora shop, viaje a bora bora todo incluido precio, luna de miel, luna de miel bora bora, islas bora bora cartagena, luna de miel en cartagena, islas del rosario hoteles, hospedaje islas del rosario, rosario cartagena, tour oceanario islas del rosario, playa tranquila baru pasadia, mejores hoteles islas del rosario, cholon islas del rosario, hoteles en bora bora, resort bora bora, viajes a bora bora, isla rosario, las islas del rosario, tour islas del rosario, tours en cartagena, tours, Caminatas, walking tour, free tour cartagena, pasadia baru, pasadias, pasadia, pasadía barú, colombia acuatica, tours en cartagena todo incluido, tours en cartagena de indias, tures, tours, tour, playa blanca, islas del rosario, isla bendita beach, isla de cholon, pasadía en cartagena económicos"
         name="keywords">
-    <meta property="og:image" content="https://toursopen.netlify.app/img/2%20(1).jpg">
+    <meta property="og:image" content="https://toursopen.netlify.app/img/touropen-2023brand.png">
     <meta
         content="Encuentra mas de 100 tours en Cartagena y disfruta de excursiones, pasadías para tu luna de miel, vacaciones ideales que podrás disfrutar en familia, aprovecha y conoce la historia de sus calles, de su ciudad amurallada."
         name="description">
