--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>TourOpen - Las MEJORES Excursiones, pasadias en Cartagena 2023</title>
+    <title>TourOpen - Las MEJORES Excursiones, pasadías en Cartagena 2023</title>
     <script defer src="js/carrousel.js"></script>
     <script src="js/acountCart.js"></script>
     <meta name="google-site-verification" content="moaq-zjEQeEECs574oodRtWr7fVVjgZu9tN5ZZdAVj4" />
@@ -15,7 +15,7 @@
     <meta
         content="Encuentra mas de 100 tours en Cartagena y disfruta de excursiones, pasadías para tu luna de miel, vacaciones ideales que podrás disfrutar en familia, aprovecha y conoce la historia de sus calles, de su ciudad amurallada."
         name="description">
-    <meta property="og:title" content="Las 10 MEJORES Excursiones y Tours en Cartagena 2022 - TourOpen">
+    <meta property="og:title" content="TourOpen - Las MEJORES Excursiones, pasadías en Cartagena 2023">
     <meta property="og:description"
         content="Encuentra mas de 100 tours en Cartagena y disfruta de excursiones, pasadías para tu luna de miel, vacaciones ideales que podrás disfrutar en familia, aprovecha y conoce la historia de sus calles, de su ciudad amurallada.">
 
