--- a/index.html
+++ b/index.html
@@ -358,6 +358,35 @@
                         <h2>
                             Ofertas
                         </h2>
+
+                        <div className="Counter-container">
+                            <div className="Counter-days">
+                                <div className="Counter-days_number">
+                                    <span> 1 </span>
+                                </div>
+                                <span className="Letter">
+                                    Dias
+                                </span>
+                            </div>
+                
+                            <div className="Counter-hours">
+                                <div className="Counter-hours_number">
+                                    <span> 0 </span>
+                                </div>
+                                <span  className="Letter">
+                                    Hours
+                                </span>
+                            </div>
+                
+                            <div className="Counter-mins">
+                                <div className="Counter-mins_number">
+                                    <span> 12 </span>
+                                </div>
+                                <span className="Letter">
+                                    Min
+                                </span>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="Arrowa-buttons">
@@ -383,19 +412,19 @@
                             <div class="Porcent">
                                 <span class=" span Show">- 6 %</span>
                             </div>
-                            <div title={title} class="Product-image">
-                                <img title={title} src="img/product-1.jpg" alt="4 Islas" />
+                            <div class="Product-image">
+                                <img title="4 Islas" src="img/4-islas-premium-en-cartagena-2023.png" alt="4 Islas" />
                             </div>
-                            <div title={title} class="Product-info">
-                                <div title={title} class="Title-description">
-                                    <h3 title={title}> 4 Islas </h3>
+                            <div class="Product-info">
+                                <div class="Title-description">
+                                    <h3 title="4 Islas"> 4 Islas </h3>
                                 </div>
-                                <div title={title} class="Price">
-                                    <span title={title} class="Price-cart-promo">
+                                <div class="Price">
+                                    <span class="Price-cart-promo">
                                         $ 235.000
                                     </span>
 
-                                    <span title={title} class="Price-cart">
+                                    <span class="Price-cart">
                                         $ 250.000
                                     </span>
                                 </div>
@@ -410,12 +439,12 @@
                             <div class="Porcent">
                                 <span class=" span Show">- 13 %</span>
                             </div>
-                            <div title={title} class="Product-image">
-                                <img src="img/product-4.jpg" alt="baru + islas del rosario" />
+                            <div class="Product-image">
+                                <img title="baru + islas del rosario" src="img/product-4.jpg" alt="baru + islas del rosario" />
                             </div>
                             <div class="Product-info">
                                 <div class="Title-description">
-                                    <h3 title={title}> Baru + Isla del rosario </h3>
+                                    <h3 title="Baru + Isla del rosario"> Baru + Isla del rosario </h3>
                                 </div>
                                 <div class="Price">
                                     <span class="Price-cart-promo">
@@ -437,20 +466,74 @@
                             <div class="Porcent">
                                 <span class=" span Show">- 25 %</span>
                             </div>
-                            <div title={title} class="Product-image">
-                                <img title={title} src="img/product-2.jpg" alt="Playa Blanca" />
+                            <div class="Product-image">
+                                <img title="Playa Blanca" src="img/product-2.jpg" alt="Playa Blanca" />
                             </div>
-                            <div title={title} class="Product-info">
-                                <div title={title} class="Title-description">
-                                    <h3 title={title}> Playa Blanca </h3>
+                            <div class="Product-info">
+                                <div class="Title-description">
+                                    <h3 title="Playa Blanca"> Playa Blanca </h3>
                                 </div>
-                                <div title={title} class="Price">
+                                <div class="Price">
                                     <span title="Playa Blanca" class="Price-cart-promo">
                                         $ 90.000
                                     </span>
 
                                     <span title={title} class="Price-cart">
                                         $ 120.000
+                                    </span>
+                                </div>
+                            </div>
+                            <div>
+                                <a target="_blank" class="btn access" href="https://bit.ly/touropen-contactar"
+                                    rel="nofollow"><i class="bi bi-whatsapp"></i> Cotizar</a>
+                            </div>
+                        </div>
+
+                        <div role="button" class="Product promo-items">
+                            <div class="Porcent">
+                                <span class=" span Show">- 24 %</span>
+                            </div>
+                            <div title="Cholón" class="Product-image">
+                                <img title="Cholón islas del rosario" src="img/cholon-cartagena-islas-del-rosario-2023.png" alt="Cholón islas del rosario" />
+                            </div>
+                            <div class="Product-info">
+                                <div class="Title-description">
+                                    <h3 title="Cholón"> Cholón  </h3>
+                                </div>
+                                <div class="Price">
+                                    <span class="Price-cart-promo">
+                                        $ 189.990
+                                    </span>
+
+                                    <span class="Price-cart">
+                                        $ 250.000
+                                    </span>
+                                </div>
+                            </div>
+                            <div>
+                                <a target="_blank" class="btn access" href="https://bit.ly/touropen-contactar"
+                                    rel="nofollow"><i class="bi bi-whatsapp"></i> Cotizar</a>
+                            </div>
+                        </div>
+
+                        <div role="button" class="Product promo-items">
+                            <div class="Porcent">
+                                <span class=" span Show">- 9 %</span>
+                            </div>
+                            <div title="Isla del Sol" class="Product-image">
+                                <img title="Isla del Sol" src="img/isla-del-sol-cartagena.2023.png" alt="baru + islas del rosario" />
+                            </div>
+                            <div class="Product-info">
+                                <div class="Title-description">
+                                    <h3 title="Isla del Sol"> Isla del Sol  </h3>
+                                </div>
+                                <div class="Price">
+                                    <span class="Price-cart-promo">
+                                        $ 240.000
+                                    </span>
+
+                                    <span class="Price-cart">
+                                        $ 265.350
                                     </span>
                                 </div>
                             </div>
