--- a/index.html
+++ b/index.html
@@ -359,31 +359,32 @@
                             Ofertas
                         </h2>
 
-                        <div className="Counter-container">
-                            <div className="Counter-days">
-                                <div className="Counter-days_number">
-                                    <span> 1 </span>
+                        <div class="Counter-container">
+                            <h4>Vence:</h4>
+                            <div class="Counter-days">
+                                <div class="Counter-days_number">
+                                    <span> 31 </span>
                                 </div>
-                                <span className="Letter">
-                                    Dias
+                                <span class="Letter">
+                                    Dia
                                 </span>
                             </div>
-                
-                            <div className="Counter-hours">
-                                <div className="Counter-hours_number">
-                                    <span> 0 </span>
-                                </div>
-                                <span  className="Letter">
-                                    Hours
-                                </span>
-                            </div>
-                
-                            <div className="Counter-mins">
-                                <div className="Counter-mins_number">
+                            <span>/</span>
+                            <div class="Counter-hours">
+                                <div class="Counter-hours_number">
                                     <span> 12 </span>
                                 </div>
-                                <span className="Letter">
-                                    Min
+                                <span  class="Letter">
+                                    Mes
+                                </span>
+                            </div>
+                            <span>/</span>
+                            <div class="Counter-mins">
+                                <div class="Counter-mins_number">
+                                    <span> 2022 </span>
+                                </div>
+                                <span class="Letter">
+                                    Año
                                 </span>
                             </div>
                         </div>
