--- a/baru-buceo-y-esnorquel.html
+++ b/baru-buceo-y-esnorquel.html
@@ -14,7 +14,7 @@
               "https://toursopen.netlify.app/img/playa-blanca.png",
               "https://toursopen.netlify.app/img/playa-blanca-2023.png"
              ],
-            "description": "Transporte terrestre, almuerzo (Pescado, pollo o vegetariano).",
+            "description": "Sumérgete en actividades como snorkel y buceo, conoce su arena blanca fina y aguas cristalinas en la isla de Barú.",
             "sku": "0160775449",
             "mpn": "440112",
             "brand": {
@@ -52,9 +52,9 @@
     <script defer src="js/carrousel.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Cartagena, Colombia, Hotels, Hoteles en Cartagena, hostal, hostales en cartagena, bed and breakfast, resort, alojamiento, vacaciones, ofertas, paquetes en Cartagena, vacaciones en Cartagena, hostal, resort, alojamiento, recomendaciones, recomendado, hotel, hoteles, vacaciones, opiniones, consejos, guía, paquete, paquetes, paquetes de tures, tures en cartagena, tures, tour" name="keywords">
-    <meta content="Playa blanca, con sus aguas blancas o cristalinas siempre ha sido uno de los lugares más visitados en Cartagena, pero ¿será la más ideal para ti?" name="description">
+    <meta content="Sumérgete en actividades como snorkel y buceo, conoce su arena blanca fina y aguas cristalinas en la isla de Barú.." name="description">
     <meta property="og:title" content="Buceo y Snorckel en Barú 2023">
-    <meta property="og:description" content="Playa blanca, con sus aguas blancas o cristalinas siempre ha sido uno de los lugares más visitados en Cartagena, pero ¿será la más ideal para ti?">
+    <meta property="og:description" content="Sumérgete en actividades como snorkel y buceo, conoce su arena blanca fina y aguas cristalinas en la isla de Barú..">
 
     <!-- Favicon -->
     <link href="img/favicon.png" rel="icon">
