--- a/baru-playa-puntilla.html
+++ b/baru-playa-puntilla.html
@@ -51,9 +51,9 @@
     <script defer src="js/carrousel.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Cartagena, Colombia, Hotels, Hoteles en Cartagena, hostal, hostales en cartagena, bed and breakfast, resort, alojamiento, vacaciones, ofertas, paquetes en Cartagena, vacaciones en Cartagena, hostal, resort, alojamiento, recomendaciones, recomendado, hotel, hoteles, vacaciones, opiniones, consejos, guía, paquete, paquetes, paquetes de tures, tures en cartagena, tures, tour" name="keywords">
-    <meta content="Playa blanca, con sus aguas blancas o cristalinas siempre ha sido uno de los lugares más visitados en Cartagena, pero ¿será la más ideal para ti?" name="description">
+    <meta content="La playa puntilla es una playa en la isla de barú, es conocida por sus aguas cristalinas y su arena blanca fina, la playa es ideal para relajarse, podrás encontrar actividades acuáticas, como snorkel y buceo." name="description">
     <meta property="og:title" content="Playa Blanca Barú - ¿La mejor opción en 2023?">
-    <meta property="og:description" content="Playa blanca, con sus aguas blancas o cristalinas siempre ha sido uno de los lugares más visitados en Cartagena, pero ¿será la más ideal para ti?">
+    <meta property="og:description" content="La playa puntilla es una playa en la isla de barú, es conocida por sus aguas cristalinas y su arena blanca fina, la playa es ideal para relajarse, podrás encontrar actividades acuáticas, como snorkel y buceo.">
 
     <!-- Favicon -->
     <link href="img/favicon.png" rel="icon">
