--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                             <span>/</span>
                             <div class="Counter-mins">
                                 <div class="Counter-mins_number">
-                                    <span> 2022 </span>
+                                    <span> 22 </span>
                                 </div>
                                 <span class="Letter">
                                     Año
@@ -546,6 +546,20 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+
+    <div class="islands-container">
+        <div class="islands-container_title">
+            <h2>Islas en Cartagena</h2>
+                <div class='island-cant'>
+                    <span>5</span>
+                    <span class='island'>Islas</span>
+                </div>
+        </div>
+        <div id="islands" class="islands">
+
         </div>
     </div>
 
@@ -831,6 +845,7 @@
     <script src="js/main.js"></script>
     <script src="js/acountCart.js" type="module"></script>
     <script src="js/carrouselProducts.js" type="module"></script>
+    <script src="js/islands.js" type="module"></script>
 </body>
 
 </html>
