--- a/baru-excursion-en-barco-privado.html
+++ b/baru-excursion-en-barco-privado.html
@@ -14,7 +14,7 @@
               "https://toursopen.netlify.app/img/playa-blanca.png",
               "https://toursopen.netlify.app/img/playa-blanca-2023.png"
              ],
-            "description": "Transporte terrestre, almuerzo (Pescado, pollo o vegetariano).",
+            "description": "Alquila un bote o barco privado en Cartagena, baru, islas del rosario y disfruta de las mejores excursiones.",
             "sku": "0160775411",
             "mpn": "440112",
             "brand": {
@@ -52,9 +52,9 @@
     <script defer src="js/carrousel.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Cartagena, Colombia, Hotels, Hoteles en Cartagena, hostal, hostales en cartagena, bed and breakfast, resort, alojamiento, vacaciones, ofertas, paquetes en Cartagena, vacaciones en Cartagena, hostal, resort, alojamiento, recomendaciones, recomendado, hotel, hoteles, vacaciones, opiniones, consejos, guía, paquete, paquetes, paquetes de tures, tures en cartagena, tures, tour" name="keywords">
-    <meta content="Playa blanca, con sus aguas blancas o cristalinas siempre ha sido uno de los lugares más visitados en Cartagena, pero ¿será la más ideal para ti?" name="description">
-    <meta property="og:title" content="Buceo y Snorckel en Barú 2023">
-    <meta property="og:description" content="Playa blanca, con sus aguas blancas o cristalinas siempre ha sido uno de los lugares más visitados en Cartagena, pero ¿será la más ideal para ti?">
+    <meta content="Alquila un bote o barco privado en Cartagena, baru, islas del rosario y disfruta de las mejores excursiones." name="description">
+    <meta property="og:title" content="Excursión en barco privado en Barú">
+    <meta property="og:description" content="Alquila un bote o barco privado en Cartagena, baru, islas del rosario y disfruta de las mejores excursiones.">
 
     <!-- Favicon -->
     <link href="img/favicon.png" rel="icon">
