--- a/index.html
+++ b/index.html
@@ -235,6 +235,43 @@
     </div>
     <!-- Feature End -->
 
+    <!-- New feature -->
+    <div class="booking feature">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-7">
+                    <div class="booking-content">
+                        <div class="section-header">
+                            <div class='new-feature'>
+                                <span>¡New</span>
+                                <span class='feature'>Feature!</span>
+                            </div>
+                            <h2>YourPack</h2>
+                        </div>
+                        <div class="about-text">
+                            <p>
+                                La nueva forma de reservar tours creada por <img class="img-text" src="img/touropen.png" alt="">, intuitiva y fácil de entender.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="feature-img">
+                        <div class="row">
+                                <img src="img/cholon-cartagena-islas-del-rosario-2023.png" alt="yourpack - touropen" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div style="justify-content: center;">
+                        <a class="btn custom-btn" href="yourpack.html">Crear tu YourPack</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- New feature -->
+
 
     <!-- Feature Start -->
     <div class="feature free-section">
