--- a/index.html
+++ b/index.html
@@ -243,8 +243,7 @@
                     <div class="booking-content">
                         <div class="section-header">
                             <div class='new-feature'>
-                                <span>¡New</span>
-                                <span class='feature'>Feature!</span>
+                                <span>¡New Feature!</span>
                             </div>
                             <h2>YourPack</h2>
                         </div>
