--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
     <!-- Feature End -->
 
     <!-- New feature -->
-    <div class="booking feature">
+    <div class="booking feature new-f">
         <div class="container">
-            <div class="row align-items-center">
+            <div style="padding-bottom: 35px;" class="row align-items-center">
                 <div class="col-lg-7">
                     <div class="booking-content">
                         <div class="section-header">
@@ -262,8 +262,8 @@
                     </div>
                 </div>
                 <div class="col-lg-5">
-                    <div style="justify-content: center;">
-                        <a class="btn custom-btn" href="yourpack.html">Crear tu YourPack</a>
+                    <div class="yourpack-btn">
+                        <a style="width: 90%;" class="btn custom-btn" href="yourpack.html">Crear tu YourPack</a>
                     </div>
                 </div>
             </div>
