--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <!-- New feature -->
 <div class="booking feature new-f">
     <div class="container">
-        <div style="padding-bottom: 35px;" class="row align-items-center">
+        <div style="padding-bottom: 35px;" class="row align-items-center feature-border">
             <div class="col-lg-7">
                 <div class="booking-content">
                     <div class="section-header">
@@ -215,14 +215,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-5">
                 <div class="feature-img">
                     <div class="row">
                             <img src="img/cholon-cartagena-islas-del-rosario-2023.png" alt="yourpack - touropen" loading="lazy">
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-5">
                 <div class="yourpack-btn">
                     <a style="width: 90%;" class="btn custom-btn" href="yourpack.html">Crear tu YourPack</a>
                 </div>
