--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         <div class='new-feature'>
                             <span>¡New Feature!</span>
                         </div>
-                        <h2>PackList</h2>
+                        <h2>TourList</h2>
                     </div>
                     <div class="about-text">
                         <p>
@@ -222,7 +222,7 @@
                     </div>
                 </div>
                 <div class="yourpack-btn">
-                    <a style="width: 90%;" class="btn custom-btn" href="yourpack.html">Crear tu PackList</a>
+                    <a style="width: 90%;" class="btn custom-btn" href="yourpack.html">Crear tu TourList</a>
                 </div>
             </div>
         </div>
