--- a/index.html
+++ b/index.html
@@ -340,7 +340,11 @@
 
     <!-- Insert Product Start -->
     <div class="section-header text-center">
-        <p class="w">Tours, Pasadías</p>
+        <div class="sections-others-feature">
+            <div class='sections-other'>
+                <span>Tours, Pasadías</span>
+            </div>
+        </div>
         <h2>Explora las 10 mejores excursiones en Cartagena</h2>
     </div>
     <div>
@@ -361,7 +365,11 @@
     <div class="menu">
         <div class="container">
             <div class="section-header text-center">
-                <p>Tours En La Ciudad</p>
+                <div class="sections-others-feature">
+                    <div class='sections-other'>
+                        <span>Tours En La Ciudad</span>
+                    </div>
+                </div>
                 <h2>Tours Dentro De Cartagena</h2>
             </div>
         </div>
