--- a/index.html
+++ b/index.html
@@ -610,7 +610,11 @@
     <div class="blog">
         <div class="container">
             <div class="section-header text-center">
-                <p>Planes</p>
+                <div class="sections-others-feature">
+                    <div class='sections-other'>
+                        <span>Planes</span>
+                    </div>
+                </div>
                 <h2>Alojamientos y planes en Cartagena de indias</h2>
             </div>
             <div class="row">
@@ -678,7 +682,11 @@
     <div class="menu">
         <div class="container">
             <div class="section-header text-center">
-                <p>Tures</p>
+                <div class="sections-others-feature">
+                    <div class='sections-other'>
+                        <span>Tures</span>
+                    </div>
+                </div>
                 <h2>Islas y Playas para visitar en Cartagena</h2>
             </div>
             <div class="menu-tab">
